monolithic/k8s/k8s-ordersystem/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersystem-backend
  namespace: soldesk
spec:
  # Deployment나 StatefulSet이 유지할 "옛날 ReplicaSet"의 수를 제한하는 옵션. 자원공간의 낭비 방지 및 관리의 편의성
  revisionHistoryLimit: 2
  replicas: 2
  selector:
    matchLabels:
      app: ordersystem-backend
  template:
    metadata:
      labels:
        app: ordersystem-backend
    spec:
      containers:
        - name: ordersystem-backend
          image: 895421295243.dkr.ecr.ap-northeast-2.amazonaws.com/order-backend:latest
          ports:
            - containerPort: 8080
          resources:
            # 컨테이너가 사용할수 있는 리소스의 최대치
            limits:
              cpu: "1"
              memory: "500Mi"
            # 컨테이너가 시작될떄 보장받아야 하는 최소 자원 (Pod 스케줄링 시 반드시 확보돼야 하는 최소 자원)
            requests:
              cpu: "0.5"
              memory: "250Mi"
          readinessProbe:
            httpGet:
              # healthcheck 경로
              path: /health
              port: 8080
            # 컨테이너 시작 후 지연
            initialDelaySeconds: 15
            # 확인 반복 주기
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: ordersystem-backend-service
  namespace: soldesk
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ordersystem-backend
